--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "electron-debug": "^3.0.1",
     "electron-reload": "^1.5.0",
-    "monaco-editor": "^0.20.0"
+    "monaco-editor": "^0.20.0",
+    "sandcastle": "^1.3.3"
   },
   "build": {
     "appId": "me.william341.laserstudio",
