--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "electron-debug": "^3.0.1",
     "electron-reload": "^1.5.0",
     "monaco-editor": "^0.20.0",
-    "sandcastle": "^1.3.3"
+    "vm2": "^3.8.4"
   },
   "build": {
     "appId": "me.william341.laserstudio",
@@ -30,7 +30,7 @@
       "publisherName": "william341"
     },
     "linux": {
-      "target": "AppImage"
+      "target": "AppImage -wl"
     }
   }
 }
